[gd_scene load_steps=11 format=3 uid="uid://cctb1pm07u1tl"]

[ext_resource type="Script" path="res://menu.gd" id="1_o16yn"]
[ext_resource type="Texture2D" uid="uid://cbws5gexgvms6" path="res://pixel_animals.png" id="2_6q51j"]
[ext_resource type="Texture2D" uid="uid://clebbu5x5ga4i" path="res://apple.png" id="3_b78bb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8wins"]
atlas = ExtResource("2_6q51j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_itkh2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wins")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hoy5u"]
atlas = ExtResource("2_6q51j")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jhj6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoy5u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0fxqw"]
atlas = ExtResource("2_6q51j")
region = Rect2(16, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_e0l6j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fxqw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_hrc3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_b78bb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_o16yn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PredatorsLabel" type="Label" parent="CanvasLayer/Control"]
z_index = 3
layout_mode = 0
offset_left = 153.5
offset_top = -230.0
offset_right = 708.5
offset_bottom = -172.0
theme_override_colors/font_color = Color(0.827451, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0
"

[node name="GrassEatersLabel" type="Label" parent="CanvasLayer/Control"]
z_index = 3
layout_mode = 0
offset_left = 153.5
offset_top = -173.0
offset_right = 737.5
offset_bottom = -115.0
theme_override_colors/font_color = Color(0, 0.203922, 0.678431, 1)
theme_override_font_sizes/font_size = 40
text = "0
"

[node name="PlantsLabel" type="Label" parent="CanvasLayer/Control"]
z_index = 3
layout_mode = 0
offset_left = 153.5
offset_top = -118.0
offset_right = 614.5
offset_bottom = -60.0
theme_override_colors/font_color = Color(0.6, 0.768627, 0.266667, 1)
theme_override_font_sizes/font_size = 40
text = "0
"

[node name="FoodLabel" type="Label" parent="CanvasLayer/Control"]
z_index = 3
layout_mode = 0
offset_left = 153.5
offset_top = -64.0
offset_right = 572.5
offset_bottom = -6.0
theme_override_colors/font_color = Color(0.8, 0.643137, 0.105882, 1)
theme_override_font_sizes/font_size = 40
text = "0
"

[node name="Button" type="Button" parent="CanvasLayer/Control"]
z_index = 3
layout_mode = 0
offset_left = -165.0
offset_top = 103.0
offset_right = 210.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Predators" type="HSlider" parent="CanvasLayer/Control"]
z_index = 1
layout_mode = 0
offset_left = -98.5
offset_top = -204.0
offset_right = 143.5
offset_bottom = -188.0
max_value = 50.0

[node name="GrassEaters" type="HSlider" parent="CanvasLayer/Control"]
z_index = 1
layout_mode = 0
offset_left = -97.5
offset_top = -146.0
offset_right = 144.5
offset_bottom = -130.0
max_value = 50.0

[node name="Plants" type="HSlider" parent="CanvasLayer/Control"]
z_index = 1
layout_mode = 0
offset_left = -96.5
offset_top = -91.0
offset_right = 145.5
offset_bottom = -75.0
max_value = 50.0

[node name="Food" type="HSlider" parent="CanvasLayer/Control"]
z_index = 1
layout_mode = 0
offset_left = -97.5
offset_top = -37.0
offset_right = 144.5
offset_bottom = -21.0
max_value = 50.0

[node name="FoxSprite" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
z_index = 5
position = Vector2(-125.5, -196)
scale = Vector2(2.98438, 2.98438)
sprite_frames = SubResource("SpriteFrames_itkh2")

[node name="RabbitSprite" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
position = Vector2(-125.5, -144)
scale = Vector2(2.6875, 2.6875)
sprite_frames = SubResource("SpriteFrames_jhj6y")

[node name="TreeSprite" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
position = Vector2(-125.5, -99)
scale = Vector2(1.6875, 1.6875)
sprite_frames = SubResource("SpriteFrames_e0l6j")

[node name="FoodSprite2" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
z_index = 1
position = Vector2(-127.5, -51)
scale = Vector2(6.3, 6.3)
sprite_frames = SubResource("SpriteFrames_hrc3x")

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -82.0
offset_top = 3.0
offset_right = -58.0
offset_bottom = 27.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -51.0
offset_top = 3.0
offset_right = 459.0
offset_bottom = 75.0
scale = Vector2(0.3, 0.3)
theme_override_font_sizes/font_size = 50
text = "Show Hp,Hunger,Age
"

[node name="Randomizer" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -101.0
offset_top = 39.0
offset_right = 131.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 30
text = "Random Values"

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="drag_ended" from="CanvasLayer/Control/Predators" to="." method="_on_predators_drag_ended"]
[connection signal="drag_ended" from="CanvasLayer/Control/GrassEaters" to="." method="_on_grass_eaters_drag_ended"]
[connection signal="drag_ended" from="CanvasLayer/Control/Plants" to="." method="_on_plants_drag_ended"]
[connection signal="drag_ended" from="CanvasLayer/Control/Food" to="." method="_on_food_drag_ended"]
[connection signal="button_up" from="CanvasLayer/Control/CheckBox" to="." method="_on_check_box_button_up"]
[connection signal="toggled" from="CanvasLayer/Control/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/Randomizer" to="." method="_on_randomizer_pressed"]
